add validation on the creation of new turnos to check for the necessary aptitudes and get tienda by id endpoint with its secciones and needed aptitudes
